--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@ Hello!</p>
 </center>
 
 
-<center><audio autoplay src="music/joji.mp3" controls autoplay></audio> 
-	
-<p> Joji - Glimpse of Us &#127926; </p></center>
+<center><audio autoplay src="music/joji.mp3"controls autoplay></audio></center>
+<center><p> Joji - Glimpse of Us &#127926; </p></center>
 
 <center><h5><i>"To be nobody but yourself in a world which is doing its best, night and day, to make you everybody else means to fight the hardest battle which any human being can fight; and never stop fighting. - E.E Cummings</i></h5></center>
 
